--- a/src/blocks/components/modal-template/modal-template.scss
+++ b/src/blocks/components/modal-template/modal-template.scss
@@ -97,7 +97,8 @@
     }
 
     &__link-inner {
-        display: inline-block;
+        display: inline-flex;
+        align-items: center;
         width: 100%;
     }
 }
