--- a/src/blocks/components/top-line/top-line.pug
+++ b/src/blocks/components/top-line/top-line.pug
@@ -50,7 +50,7 @@ mixin top-line({ className = false })
                 className: 'top-line__btn btn_size_md btn_theme_alpha', 
                 title: 'Перезвонить',
                 attributesName: {
-                    'data-custom-open': 'modal-request'
+                    'data-custom-open': 'modal-call'
                 }
             })
         +hamburger({
