--- a/src/blocks/modules/clients/clients.scss
+++ b/src/blocks/modules/clients/clients.scss
@@ -57,7 +57,7 @@
 
         .clients__slide-inner {
             display: flex;
-            align-items: center;
+            align-items: flex-start;
             @media (max-width: $break_sm) {
                 flex-direction: column;
             }
