--- a/src/blocks/modules/clients/data.pug
+++ b/src/blocks/modules/clients/data.pug
@@ -30,7 +30,7 @@
     const clientsList = [
         {
             title: "АО «Шубарколь Комир»",
-            description: "Разработка национальных (государственных) стандартов РК, стандартов организации, паспортов безопасности ",
+            description: "Разработка национальных (государственных) стандартов РК, паспортов безопасности ",
             imgName: "logo-1"
         },
         {
