--- a/src/blocks/modules/consultation/consultation.pug
+++ b/src/blocks/modules/consultation/consultation.pug
@@ -6,7 +6,7 @@ mixin consultation({ className = false })
         .consultation__container
             .consultation__row
                 .consultation__form-col
-                    form.consultation__form
+                    form.consultation__form(data-subject="Заявка на консультацию")
                         fieldset
                             legend.consultation__title <b>Для бесплатной консультации</b> нужен только ваш телефон
                             .consultation__form-row 
