--- a/src/blocks/modules/intro/intro.pug
+++ b/src/blocks/modules/intro/intro.pug
@@ -25,7 +25,7 @@ mixin intro({ className = false })
                                 viewBoxName: '0 0 31 27'
                             },
                             attributesName: {
-                                'data-custom-open': 'modal-call'
+                                'data-custom-open': 'modal-request'
                             }
                         })
                         a.intro__link.link.link_underline.link_arrow(href="#services") Наши услуги <span class="link__arrow">→</span>
