--- a/src/blocks/modules/modal-services/modal-services.pug
+++ b/src/blocks/modules/modal-services/modal-services.pug
@@ -3,16 +3,15 @@ mixin modal-services({ className = false })
     include ../services/data
     -
         const pdfArr = [
-            "испытательная_лаборатория",
-            "анкета_удовлетворенности_потребителей",
-            "знаки_соответствия",
-            "информация_о_финансировании",
-            "нормативные_документы_по_сертификации",
-            "политика_по_беспристрастности_ОПС",
             "порядок_подтверждения_соответствия",
-            "порядок_рассмотрения_жалоб_и_апелляций",
+            "политика_по_беспристрастности_ОПС",
             "права_и_обязанности_заявителей",
+            "нормативные_документы_по_сертификации_углей_и_продуктов_их_переработки",
             "приостановление_и_отмена_действия_выданных_сертификатов_соответствия",
+            "знаки_соответствия",
+            "порядок_рассмотрения_жалоб_и_апелляций",
+            "информация_о_финансировании",
+            "анкета_удовлетворенности_потребителей",
         ];
     
     each modal in servicesList
@@ -32,10 +31,10 @@ mixin modal-services({ className = false })
                 p.p-sm ИЛ ТОО «НИЦ «Уголь» аккредитована на техническую компетентность и независимость, имеет самую широкую Область аккредитации в Республике Казахстан перечень компонентов и характеристик угля и продуктов их переработки.
                 p.p-sm
                     b Лабораторная деятельность ИЛ обеспечивает беспристрастность,
-                    | руководствуясь Политикой по обеспечению беспристрастности, а также предусматривается соблюдение конфиденциальности информации Инструкцией «Права собственности и конфиденциальности» и процедурой, позволяющей обеспечить конфиденциальность информации защитой электронного хранения и передачей результатов
+                    |  руководствуясь Политикой по обеспечению беспристрастности, а также предусматривается соблюдение конфиденциальности информации Инструкцией «Права собственности и конфиденциальности» и процедурой, позволяющей обеспечить конфиденциальность информации защитой электронного хранения и передачей результатов
                 p.p-sm
                     b Техническая компетентность подтверждается
-                    | международными межлабораторными сличительными испытаниями, результаты которых подтверждены протоколами и сертификатами.
+                    |  международными межлабораторными сличительными испытаниями, результаты которых подтверждены протоколами и сертификатами.
                 p.p-sm ИЛ осуществляет свою деятельность и подтверждает свои обязательства по развитию и внедрению системы менеджмента, по заявкам Заявителей в соответствии с правилами и процедурами Государственной системы технического регулирования Республики Казахстан и требованиями СТ РК ISO 9001, ГОСТ ISO/IEC 17025-2019.
                 p.p-sm
                     b Испытательная лаборатория проводит следующие виды испытаний:
@@ -75,7 +74,7 @@ mixin modal-services({ className = false })
                 p.p-sm Каждый сотрудник Органа по подтверждению соответствия гарантирует беспристрастное, качественное выполнение работ по подтверждению соответствия и обеспечение конфиденциальности информации Заявителя.
                 p.p-sm Подтверждение соответствия (сертификация) указанной продукции проводится на соответствие требованиям национальных, межгосударственных, международных стандартов и других нормативных документов.
                 each pdf in pdfArr
-                    a.modal-template__link-inner.link.link_icon.link_size_small(href=pdf target="_blank") 
+                    a.modal-template__link-inner.link.link_icon.link_size_small(href=`${pdf}.pdf` target="_blank") 
                         +icon({
                             iconName: 'pdf',
                             className: 'link__icon',
@@ -87,7 +86,7 @@ mixin modal-services({ className = false })
                 p.p-sm Отдел стандартизации выполняет следующие работы:
                 ul.p-sm 
                     li • подготовка предложений по определению основных  направлений  развития государственной системы технического регулирования топливно-энергетического комплекса;
-                    li • разработка нормативных документов по стандартизации: технических регламентов, национальных, межгосударственных, международных стандартов, стандартов организаций;
+                    li • разработка нормативных документов по стандартизации: технических регламентов, национальных, межгосударственных, международных стандартов;
                     li • разработка паспортов безопасности и технологических регламентов;
                     li • подготовка изменений к действующим нормативным документам по стандартизации;
                     li • подготовка предложений в Планы государственной стандартизации и Программы по межгосударственной стандартизации;
@@ -96,5 +95,5 @@ mixin modal-services({ className = false })
                 p.p-sm Отдел стандартизации участвует в работах технических комитетов по межгосударственной стандартизации – МТК 179 «Уголь и продукты его переработки» и международной стандартизации – ISO/TC 27 «Твердое минеральное топливо».
             if (modal.iconName === "services_microscope")
                 p.p-bold Отдел Науки ТОО «Научно-исследовательский центр «Уголь» г. Караганда.
-                p.p-sm Отдел науки тесно работает с Испытательной лабораторией и проводит исследования углей и продуктов переработки с целью определения направлений использования, изучения свойств углей новых месторождений, возможности его коксования, брикетирования и тд, разработки Стандартов Организаций для дальнейшей сертификации продуктов.
+                p.p-sm Отдел науки тесно работает с Испытательной лабораторией и проводит исследования углей и продуктов переработки с целью определения направлений использования, изучения свойств углей новых месторождений, возможности его коксования, брикетирования и т.д.
                 p.p-sm Конечным результатом исследовательских работ является Отчет по Научно-Исследовательской работе.
