--- a/src/blocks/modules/request/request.pug
+++ b/src/blocks/modules/request/request.pug
@@ -11,7 +11,7 @@ mixin request({ className = false })
                         img.request__img(src="./img/logo.svg" alt="Логотип «НИЦ Уголь»")
                         figcaption.request__caption Мы более 20 лет на рынке!
                 .request__form-col
-                    form.request__form
+                    form.request__form(data-subject="Оставить заявку")
                         fieldset
                             legend.request__form-title Но если у вас специфичная задача или просто есть вопросы, оставляйте заявку, мы свяжемся с вами в течении 30 минут
                             .request__form-body 
