--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -3,11 +3,11 @@
 		srcPixel: "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=",
 		socials: {
 			whatsapp: {
-				href: 'https://whatsapp.ru',
+				href: 'https://wa.me/+77765231919',
 				iconName: 'whatsapp',
 			},
 			telegram: {
-				href: 'https://telegram.com',
+				href: 'https://t.me/nicugol',
 				iconName: 'telegram',
 			},
 		},
@@ -21,8 +21,8 @@
 				}
 			},
 			{
-				number: '+7 (705) 316 30 41',
-				tel: '+77053163041',
+				number: '+7 (701) 775 81 71',
+				tel: '+77017758171',
 				text: {
 					short: '(моб)',
 					long: '(мобильный)'
@@ -63,9 +63,14 @@ html(lang="ru")
 		meta(name="description" content="предлагает комплекс услуг по исследованию, испытанию, стандартизации и сертификации углей и продуктов их переработки по всему Казахстану")
 		meta(property="og:title" content=title)
 		meta(property="og:site_name" content="ТОО «НИЦ «Уголь»")
-		meta(property="og:url" content="https://coal.bydex.ru/")
+		meta(property="og:url" content="https://nicugol.kz/")
 		meta(property="og:description" content="предлагает комплекс услуг по исследованию, испытанию, стандартизации и сертификации углей и продуктов их переработки по всему Казахстану")
 		meta(property="og:image" content="img/opengraph.jpg")
+		meta(property="og:image:width" content="400")
+		meta(property="og:image:height" content="260")
+		meta(name="twitter:image" content="img/opengraph.jpg")
+		meta(name="twitter:card" content="summary_large_image")
+		meta(property="og:image:type" content="image/jpg")
 		meta(name="theme-color" content="#fff")
 		meta(name="apple-mobile-web-app-status-bar-style" content="black-translucent")
 		meta(name="viewport" content="width=device-width,user-scalable=no,initial-scale=1,maximum-scale=1,minimum-scale=1")
