--- a/src/blocks/components/modal/modal.scss
+++ b/src/blocks/components/modal/modal.scss
@@ -151,6 +151,7 @@
 
 .modal__title {
     font-size: rem(32);
+    line-height: 137%;
     color: $alpha;
     margin-bottom: 9px;
 
@@ -214,6 +215,8 @@
 
 .modal__description {
     margin-bottom: 30px;
+    line-height: 137%;
+    font-weight: 600;
 
     &:last-child {
         margin-bottom: 0;
