--- a/src/blocks/components/_components.scss
+++ b/src/blocks/components/_components.scss
@@ -13,3 +13,4 @@
 @import "modal-template/modal-template";
 @import "single-page/single-page";
 @import "card-img/card-img";
+@import "blockquote/blockquote";
