--- a/src/blocks/components/nav/data.pug
+++ b/src/blocks/components/nav/data.pug
@@ -10,6 +10,10 @@
             title: "Услуги"
         },
         {
+            href: "government",
+            title: "Правление"
+        },
+        {
             href: "about",
             title: "О компании"
         },
