--- a/src/blocks/modules/footer/footer.pug
+++ b/src/blocks/modules/footer/footer.pug
@@ -11,6 +11,6 @@ mixin footer({ className = false })
                     p.footer__description !{config.slogan}
                 .footer__policy-col 
                     p.footer__policy-title ©2021. Все права защищены. 
-                    button.link.link_underline(data-custom-open='modal-policy') Политика конфеденциальности данных
+                    button.link.link_underline.text-left(data-custom-open='modal-policy') Политика конфеденциальности данных
                 p.footer__copyright 
                     | Сделано в <a class="link link_underline" href="https://webpeppers.kz" target="_blank" rel="noopener">Webpeppers.kz</a>
