--- a/src/blocks/modules/intro/data.pug
+++ b/src/blocks/modules/intro/data.pug
@@ -10,11 +10,19 @@
         },
         {
             imgName: "slider-3",
-            description: "Уголь активированный (сорбенты – адсорбенты, абсорбенты) Гранулометрический состав, суммарный объем пор по воде и др.",
+            description: "Уголь активированный (сорбенты – адсорбенты, абсорбенты): гранулометрический состав, суммарный объем пор по воде и др.",
         },
         {
             imgName: "slider-4",
             description: "Биотопливо: зольность, содержание влаги, механическая прочность, выход летучих веществ т.д. ",
+        },
+        {
+            imgName: "slider-5",
+            description: "Гуминовые препараты (гумат калия и гумат натрия): зольность, влажность, выход свободных гуминовых кислот и т.д.",
+        },
+        {
+            imgName: "slider-6",
+            description: "Золы-уноса (микросфера): химсостав, влага, зольность и т.д",
         },
     ];
     
