--- a/src/blocks/modules/steps/data.pug
+++ b/src/blocks/modules/steps/data.pug
@@ -13,7 +13,7 @@
         {
             iconName: "steps_payment",
             title: "Договор и оплата",
-            description: "Заключаем договор на проведение работы, оплата 100%",
+            description: "Работаем по заявке или по договору",
         },
         {
             iconName: "steps_labaratory",
@@ -22,7 +22,7 @@
         },
         {
             iconName: "steps_certificate",
-            title: "Вы получате результат",
-            description: "Исходя из выбранной услуги вы получаете например нормативный документ, сертификат соответствия и т.п.",
+            title: "Вы получаете результат",
+            description: "Исходя из выбранной услуги вы получаете например протокол испытания, сертификат соответствия и т.п.",
         },
     ];
