--- a/src/blocks/pages/index/index.pug
+++ b/src/blocks/pages/index/index.pug
@@ -2,6 +2,7 @@ mixin index({ className = false })
     include ../../modules/intro/intro
     include ../../modules/services/services
     include ../../modules/consultation/consultation
+    include ../../modules/government/government
     include ../../modules/about/about
     include ../../modules/certificates/certificates
     include ../../modules/steps/steps
@@ -18,6 +19,7 @@ mixin index({ className = false })
     +intro({})
     +services({})
     +consultation({})
+    +government({})
     +about({})
     +certificates({})
     +steps({})
