--- a/src/views/layouts/default.pug
+++ b/src/views/layouts/default.pug
@@ -21,11 +21,11 @@
 				}
 			},
 			{
-				number: '+7 (701) 775 81 71',
-				tel: '+77017758171',
+				number: '+7 (7212) 51 26 62',
+				tel: '+77212512662',
 				text: {
-					short: '(моб)',
-					long: '(мобильный)'
+					short: '(гор)',
+					long: '(городской)'
 				}
 			},
 			{
