--- a/src/blocks/components/nav/nav.scss
+++ b/src/blocks/components/nav/nav.scss
@@ -111,8 +111,8 @@
         backdrop-filter: blur(10px);
         border-radius: 50px;
         @media (max-width: $break_lg) {
-            border: 0;
             padding: 0;
+            border: 0;
             background-color: transparent;
             backdrop-filter: none;
         }
@@ -126,8 +126,8 @@
     &__list {
         display: flex;
         justify-content: space-between;
-        margin-left: -20px;
-        margin-right: -20px;
+        margin-left: -8px;
+        margin-right: -8px;
         @media (max-width: $break_xl) {
             margin-right: -12px;
             margin-left: -12px;
@@ -140,8 +140,8 @@
     &__item {
         display: flex;
         align-items: center;
-        margin-right: 20px;
-        margin-left: 20px;
+        margin-right: 8px;
+        margin-left: 8px;
         @media (max-width: $break_xl) {
             margin-right: 12px;
             margin-left: 12px;
@@ -153,6 +153,9 @@
 
     &__link {
         display: block;
+        font-weight: 600;
+        transform: translate3d(0, 0, 0);
+        will-change: padding-top, padding-bottom;
         @media (max-width: $break_xl) {
             font-size: rem(14);
             white-space: nowrap;
@@ -178,8 +181,6 @@
             duration: 0.3s;
             property: color, padding-top, padding-bottom;
         }
-        transform: translate3d(0, 0, 0);
-        will-change: padding-top, padding-bottom;
     }
 
     &__link_icon {
@@ -199,4 +200,8 @@
             padding-bottom: 12px;
         }
     }
+}
+
+.text-left {
+    text-align: left !important;
 }
