--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -2,6 +2,7 @@
 @import "intro/intro";
 @import "services/services";
 @import "consultation/consultation";
+@import "government/government";
 @import "about/about";
 @import "certificates/certificates";
 @import "steps/steps";
